--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -1,4 +1,5 @@
 <div class="MainTableDetail">
+       
 
     <div class="Detail-content" [ngStyle]="{ width: '230mm' }">
         <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
@@ -11,9 +12,12 @@
             </button>
 
         </div>
-
+        
         <div class="uploadFilePDF">
             <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
+             <div (click)="onSignPage()">
+                ไปที่หน้าการเซ็น
+             </div>
             <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
                 (change)="onFileSelected($event)" style="font-size: 14px;">
             <button type="button" (click)="clearFileInput()"
@@ -29,23 +33,9 @@
             </pdf-viewer>
             <img *ngIf="isFileImage" [src]="selectedFilePath" alt="Image"
                 style="display: block; align-items: center; max-width:  100%; max-height: 297mm;">
-            <!-- Add signature boxes here -->
-            <!-- <div *ngFor="let box of boxes; let i = index" class="UploadContentBoxPerson"
-                [ngStyle]="{'top': box.top + 'px', 'left': box.left + 'px', 'position': 'absolute'}"
-                draggable="true" (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)">
-                <div class="openSignModalPerson" (click)="openSignModal(i)">
-                    <a>คลิกเพื่อเซ็น</a>
-                </div>
-                <div class="Writte-signPerson" *ngIf="isSignModalVisible[i]">
-                    <canvas id="writteSignCanvas-{{i}}" class="full-page-signWrittePerson">Error something with
-                        canvas</canvas>
-                    <button type="button" class="close-btn" (click)="closeSignModal(i)">×</button>
-                    <button type="button" class="drag-btn" id="drag-btn-{{i}}" draggable="true" (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)">☰</button>
-                </div>
-
-            </div> -->
-            <!-- End of signature boxes -->
         </div>
+
+
 
 
         <div class="page" id="firstPage">
