--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -13,7 +13,7 @@
             <th class="small-name">ชื่อ</th>
             <th class="small-name">นามสกุล</th>
             <th class="small-name">อีเมล</th>
-            <th class="small-cell">ตำเเหน่ง</th>
+            <th class="small-cell">ระดับผู้ใช้งาน</th>
             <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
                 class="fa fa-gear"></i></th>
           </tr>
