--- a/src/app/layouts/auth-layout/register/register.component.css
+++ b/src/app/layouts/auth-layout/register/register.component.css
@@ -36,6 +36,7 @@
   .form-group label {
     display: block;
     margin-bottom: 5px;
+    font-size: 14px;
     font-family: 'Sarabun', sans-serif;
   }  
   
@@ -66,7 +67,9 @@
     display: flex;
     justify-content: flex-start;
   }
+
   .uploadPicture{
+    position: relative;
     display: flex;
     height: 90px;
     border: 1px solid  #525252;
@@ -77,7 +80,13 @@
     margin: 25px;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
+  }
+  .uploadPicture input[type='file']{
+    position: absolute;
+    transform: scale(3);
+    opacity: 0;
   }
   /*invalidate style*/
   .error-text{
