--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -40,7 +40,9 @@
   height: 50px;
   font-size: 3cqw;
 }
-
+.nameCount{
+  font-size: 16px;
+}
 :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
   box-sizing: border-box;
   display: inline-block;
@@ -95,7 +97,7 @@
 
 .BoxTotal {
   position: relative;
-  height: 360px;
+  height: 300px;
   /* background-color: rgb(255, 209, 0); */
 }
 
