--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -20,7 +20,19 @@
             <a style="font-size: 18px;">เอกสารตรวจสอบ</a>
           </div>
           <div class="card-body">
-          
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="number">
+                  {{recordCount}}  
+          </div> 
+              </div>
+              <div class="col-sm-4">
+                <div class="nameCount">
+                  ( ฉบับ ) 
+               </div>
+              </div>
+            </div>
+            
           </div>
           
         </div>
