--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -96,6 +96,6 @@
 
 
 
-<div *ngIf="loading">
+<!-- <div *ngIf="loading">
   <ngx-loading [show]="loading" [config]="{ animationType: 'wanderingCubes' }"></ngx-loading>
-</div>
+</div> -->
