--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <div class="dropdown">
                 <div class="Profile" (click)="toggleDropdown($event)">
-                    <img src="./assets/img/Person-icon.jpg" alt="img not fond" style="border-radius: 15px; border: 1 solid black; height: 32px; width: 32px;">
+                    <img [src]="profileImgUrl" alt="img not fond" style="border-radius: 15px; border: 1 solid black; height: 32px; width: 32px;">
                 </div>
                 <div class="dropdown-menu"  [class.show]="dropdownOpen">
                     <a class="nav-link"  (click)="openProfile()"><i class="fa fa-user"></i> &nbsp;จัดการผู้ใช้</a>
