--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -31,39 +31,86 @@
 
                         <div class="col-sm-6">
                           <div class="Info-text">
-                            ชื่อ {{ UserData?.firstname }} 
+                            ชื่อ : {{ UserData?.employeeId.firstname }} 
                           </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="Info-text">
-                            นามสกุล {{ UserData?.lastname }}
+                            นามสกุล : {{ UserData?.employeeId.lastname }}
+                          </div>
+                        </div>
+
+                        <div class="col-sm-12">
+                              <div class="title"></div>
+                        </div>
+                    
+                        <div class="col-sm-12">
+                          <div class="Info-text">
+                            ตำแหน่ง/หน้าที่ :  {{ UserData?.employeeId.bearing }}
                           </div>
                         </div>
                         <div class="col-sm-12">
                           <div class="Info-text">
-                            ที่อยู่   {{ UserData?.address }}
+                            องค์กร/บริษัท :  {{ UserData?.employeeId.company }}
+                          </div>
+                        </div>
+                        <div class="col-sm-12">
+                          <div class="Info-text">
+                            ที่อยู่ :  {{ UserData?.employeeId.address }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
                            
-                            จังหวัด   {{ UserData?.provine }}
+                            ตำบล : {{ UserData?.employeeId.subDistrit }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
-                            
-                            ประเทศ  {{ UserData?.country }}
+                           
+                            อำเภอ :  {{ UserData?.employeeId.Distrit }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
-                            รหัสไปรษณีย์ {{ UserData?.postCode }}
+                           
+                            จังหวัด :  {{ UserData?.employeeId.provine }}
+                          </div>
+                        </div>
+                    
+                        <div class="col-md-12">
+                          <div class="Info-text">
+                            รหัสไปรษณีย์ :{{ UserData?.employeeId.postCode }}
                           </div>
                         </div>
 
                       </div>
+                   
+                      <div class="title"> </div>
+                      <div class="row">
+                        <div class="col-sm-12">
+                            ข้อมูลติดต่อ
+                        </div>
+                      
+                        <div class="col-sm-6">
+                          <div class="Info-text">
+                            อีเมล : {{ UserData?.employeeId.email }} 
+                          </div>
+                        </div>
+  
+                        <div class="col-sm-12">
+                          <div class="Info-text">
+                            เบอร์โทร : {{ UserData?.employeeId.phone }}
+                          </div>
+                        </div>
+                    
+                   
+      
+                      </div>
+
                     </div>
+
+
                     <div *ngIf="EditStatus" class="userEdit">
                       <form [formGroup]="UserInfoForm" (ngSubmit)="SaveUserInfo()">        
                         <div class="row" >
@@ -83,21 +130,43 @@
                               <input matInput placeholder="ที่อยู่" formControlName="address" type="text">
                             </mat-form-field>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
+                            <mat-form-field class="example-full-width">
+                              <input matInput placeholder="ตำบล" formControlName="subDistrict" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-md-3">
+                            <mat-form-field class="example-full-width">
+                              <input matInput placeholder="อำเภอ" formControlName="district" type="text">
+                            </mat-form-field>
+                          </div>
+                          <div class="col-md-3">
                             <mat-form-field class="example-full-width">
                               <input matInput placeholder="จังหวัด" formControlName="province" type="text">
                             </mat-form-field>
                           </div>
-                          <div class="col-md-4">
-                            <mat-form-field class="example-full-width">
-                              <input matInput placeholder="ประเทศ" formControlName="country" type="text">
-                            </mat-form-field>
-                          </div>
-                          <div class="col-md-4">
+                        
+                          <div class="col-md-3">
                             <mat-form-field class="example-full-width">
                               <input matInput placeholder="รหัสไปรษณีย์" formControlName="postalCode" type="text">
                             </mat-form-field>
                           </div>
+
+                          <div class="col-sm-12">
+                            <div class="title"> ข้อมูลติดต่อ</div>
+                          </div>
+                        
+                            <div class="col-md-12">
+                              <mat-form-field class="example-full-width">
+                                <input matInput placeholder="อีเมล" type="email">
+                              </mat-form-field>
+                            </div>
+                            <div class="col-md-12">
+                              <mat-form-field class="example-full-width">
+                                <input matInput placeholder="เบอร์โทร" type="text">
+                              </mat-form-field>
+                            </div>
+                      
   
                         </div>
                         <button type="submit" class="btn btn-add">บันทึก</button>
@@ -108,45 +177,7 @@
                   </div>
                 </div>
 
-                <div class="userContect">
-                  <div class="title"> ข้อมูลติดต่อ</div>
-                  <div class="user-content">
-                    <div *ngIf="!EditStatus" class="user-data">
-                      <div class="row">
-
-                        <div class="col-sm-6">
-                          <div class="Info-text">
-                            อีเมล {{ UserData?.email }} 
-                          </div>
-                        </div>
-  
-                        <div class="col-sm-12">
-                          <div class="Info-text">
-                            เบอร์โทร   {{ UserData?.phone }}
-                          </div>
-                        </div>
-                    
-                   
-      
-                      </div>
-                    </div>
-                    <div *ngIf="EditStatus" class="user-edit">
-                      <div class="row">
-                        <div class="col-md-12">
-                          <mat-form-field class="example-full-width">
-                            <input matInput placeholder="อีเมล" type="email">
-                          </mat-form-field>
-                        </div>
-                        <div class="col-md-12">
-                          <mat-form-field class="example-full-width">
-                            <input matInput placeholder="เบอร์โทร" type="text">
-                          </mat-form-field>
-                        </div>
-                      </div>
-                    </div>
-                  
-                  </div>
-                </div>
+              
 
 
 
@@ -155,7 +186,7 @@
                 <div class="card-profile">
                   <div class="card-avatar">
                     <a href="javascript:void(0)">
-                      <img class="img" src="./assets/img/faces/marc.jpg" />
+                      <img class="img" [src]="profileImgUrl" />
                     </a>
                   </div>
 
