--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -76,7 +76,7 @@
                       <button class="searchLocation" (click)="searchLocation(item?.record_location)">ดูพิกัด</button>
 
                     </td>
-                    <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
+                    <td style="vertical-align: middle; white-space: nowrap; text-align: center; justify-content: center;">
                       <i *ngIf="item.record_filename" class="fa-regular fa-circle-check checkIcon"> &nbsp;<div
                           style="font-family: 'Sarabun',sans-serif;">เซ็นสำเร็จ</div></i>
                       <i *ngIf="!item.record_filename" class="fa-regular fa-circle-xmark cancleIcon"> &nbsp;<div
