--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -31,12 +31,12 @@
 
                         <div class="col-sm-6">
                           <div class="Info-text">
-                            ชื่อ {{ UserData?.firstname }} 
+                            ชื่อ {{ UserData?.employeeId?.firstname }} 
                           </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="Info-text">
-                            นามสกุล {{ UserData?.lastname }}
+                            นามสกุล {{ UserData?.employeeId?.lastname }}
                           </div>
                         </div>
                         <div class="col-sm-12">
