--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
 <div class="dashboard">
-
   <div class="global-sales">
     <div class="BoxTotal row">
       <div class="col-sm-4">
@@ -8,36 +7,32 @@
             <a style="font-size: 18px;">เอกสารตรวจสอบ</a>
           </div>
           <div class="card-body">
-            <div class="number">2,569,789</div>
+            <div class="number">{{ lastDataId | number }}</div>
           </div>
-          
         </div>
       </div>
       <div class="col-sm-4">
         <div class="Box2 card">
-
           <div class="card-header card-header-danger">
-            <a style="font-size: 18px;">เอกสารที่ถูกเซ็น</a>
+            <a style="font-size: 18px;">เอกสารที่ยังไม่ถูกเซ็น</a>
           </div>
-
           <div class="card-body">
-            <p>1,987,654</p>
+            <p>{{ getDifference() | number }}</p>
           </div>
-
         </div>
       </div>
       <div class="col-sm-4">
         <div class="Box3 card">
           <div class="card-header card-header-danger">
-            <a style="font-size: 18px;">เอกสารที่ถูกสร้าง</a>
+            <a style="font-size: 18px;">เอกสารที่ถูกเซ็นแล้ว</a>
           </div>
           <div class="card-body">
-            <p>1,987,654</p>
+            <p>{{ pdfButtonCount | number }}</p>
           </div>
         </div>
       </div>
     </div>
     <app-thaicounty></app-thaicounty>
-  <app-map></app-map>
+    <app-map></app-map>
   </div>
 </div>
