--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -91,7 +91,7 @@
                       </button>
 
 
-                      <button  (click)="openDetailModal(item?._id)" style="border: none; background: none; color: black;">
+                      <button *ngIf="!item.record_filename" (click)="openDetailModal(item?._id)" style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                           class="fa fa-file-text-o ModalIcon "></i>
                       </button>
