--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -31,16 +31,11 @@
 
                         <div class="col-sm-6">
                           <div class="Info-text">
-<<<<<<< HEAD
                             ชื่อ : {{ UserData?.employeeId.firstname }} 
-=======
-                            ชื่อ {{ UserData?.employeeId?.firstname }} 
->>>>>>> 2151a20937a944949b04ecb5b77dacec2ad3898e
                           </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="Info-text">
-<<<<<<< HEAD
                             นามสกุล : {{ UserData?.employeeId.lastname }}
                           </div>
                         </div>
@@ -52,9 +47,6 @@
                         <div class="col-sm-12">
                           <div class="Info-text">
                             ตำแหน่ง/หน้าที่ :  {{ UserData?.employeeId.bearing }}
-=======
-                            นามสกุล {{ UserData?.employeeId?.lastname }}
->>>>>>> 2151a20937a944949b04ecb5b77dacec2ad3898e
                           </div>
                         </div>
                         <div class="col-sm-12">
@@ -70,19 +62,19 @@
                         <div class="col-md-4">
                           <div class="Info-text">
                            
-                            ตำบล : {{ UserData?.employeeId.subDistrit }}
+                            ตำบล : {{ UserData?.employeeId.tambon }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
                            
-                            อำเภอ :  {{ UserData?.employeeId.Distrit }}
+                            อำเภอ :  {{ UserData?.employeeId.amphure }}
                           </div>
                         </div>
                         <div class="col-md-4">
                           <div class="Info-text">
                            
-                            จังหวัด :  {{ UserData?.employeeId.provine }}
+                            จังหวัด :  {{ UserData?.employeeId.province }}
                           </div>
                         </div>
                     
