--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -47,8 +47,9 @@
                       ครั้งที่</th>
                     <th style="color: black;  font-size: 16px;">หัวข้อการตรวจสอบ</th>
                     <th style="width: 10%; color: black; font-size: 16px;">วันที่เริ่มตรวจสอบ</th>
-
-                    <th style="width: 5%; color: black;  font-size: 16px;">สถานที่</th>
+                    <th style="width: 5%; color: black;  font-size: 16px;">ผู้สร้างเอกสาร</th>
+                    
+                    <th style="width: 5%; color: black;  font-size: 16px;">สถานที่</th>        
                     <th style="width: 10%; color: black;  font-size: 16px; text-align: center;">สถานะ</th>
                     <th class="text-center" style="color: black;  font-size: 16px;"><i class="fa fa-gear"></i></th>
                   </tr>
@@ -69,6 +70,10 @@
                     <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
 
                       {{item?.record_star_date | thaidate: "medium"}}
+                    </td>
+                    <td style=" white-space: nowrap; ">
+
+                      {{item?.userId}}
                     </td>
 
                     <td class="text-center" style=" white-space: nowrap;">
