--- a/src/app/layouts/auth-layout/register/register.component.css
+++ b/src/app/layouts/auth-layout/register/register.component.css
@@ -92,6 +92,17 @@
     transform: scale(3);
     opacity: 0;
   }
+  .profile-image-container {
+    margin-top: 20px;
+  }
+  .profile-image {
+    width: 150px; /* Adjust size as needed */
+    height: 150px;
+    object-fit: cover; /* Ensure the image covers the area */
+    border-radius: 50%; /* Makes the image circular */
+    border: 2px solid #ddd; /* Optional border around the image */
+  }
+
   /*invalidate style*/
   .error-text{
     font-size: 14px;
@@ -103,7 +114,7 @@
     border-radius: 5px;
   }
 
-  
+  /*btn submit*/
   .btn-create-account {
     background-color: #24a0ed;;
     color: white;
