--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -55,8 +55,8 @@
           </div>
           <div class="card-body">
             <div>
-              
-          </div>    
+              {{ buttonCount }}
+            </div>
           </div>
         </div>
       </div>
