--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -1,3 +1,4 @@
+<!-- <div *ngIf="isSuperAdmin"></div> -->
 <div class="main-content">
     <div class="card">
       <div class="card-header card-header-danger">
