--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -3,6 +3,7 @@
   2.ส่วนของ "tooltip" เรียกใช่งานจาก bootstrap ไม่ได้ tooltip คือ เมื่อเอาเมาส์ไปที่ปุ่มแล้วมันจะขึ้นข้อความขึ้นมานะอย่าง "ดูรายละเอียด"
   3.style ของ tooltip ใช้ได้แค่ในตัวของ modal ถึงใช้ได้แต่ไม่สามารถมีการทำงานในแบบที่ต้องการได้ ตำแหน่งเริ่มต้นของ
 -->
+<!-- <div *ngIf="isNotSuper"> -->
 <div class="main-content">
 
 
@@ -501,3 +502,4 @@
     </div>
   </div>
 </div>
+<!-- </div> -->
