--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,90 +1,24 @@
-  <div class="logo">
+<div class="logo">
   <a href="https://www.ntplc.co.th/" class="simple-text">
-      <div class="logo-img">
-          <img src="/assets/img/nt_logo.png"/>
-      </div>
-     
+    <div class="logo-img">
+      <img src="/assets/img/nt_logo.png" />
+    </div>
   </a>
 </div>
 <div class="sidebar-wrapper">
-  
   <div *ngIf="isMobileMenu()">
     <form class="navbar-form">
       <span class="bmd-form-group">
         <div class="input-group no-border">
-          <input type="text" value class="form-control" placeholder="Search...">
-          <button mat-raised-button type="submit"
-            class="btn btn-white btn-round btn-just-icon">
+          <input type="text" value class="form-control" placeholder="Search..." />
+          <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
             <i class="material-icons">search</i>
             <div class="ripple-container"></div>
           </button>
         </div>
       </span>
     </form>
-    
-    <ul class="nav navbar-nav nav-mobile-menu">
-
-      <!-- <li class="nav-item">
-        <a>
-          <i class="material-icons">dashboard</i>
-          <p>
-            <span class="d-lg-none d-md-block">Stats</span>
-          </p>
-        </a>
-      </li> -->
-      <!-- <li class="nav-item dropdown">
-        <a
-          id="navbarDropdownMenuLink"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="material-icons">notifications</i>
-          <span class="notification">5</span>
-          <p>
-            <span class="d-lg-none d-md-block">Some Actions</span>
-          </p>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right"
-          aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Mike John responded to your
-            email</a>
-          <a class="dropdown-item" href="#">You have 5 new tasks</a>
-          <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-          <a class="dropdown-item" href="#">Another Notification</a>
-          <a class="dropdown-item" href="#">Another One</a>
-        </div>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">
-          <i class="material-icons">person</i>
-          <p>
-            <span class="d-lg-none d-md-block">Account</span>
-          </p>
-        </a>
-      </li> -->
-    </ul>
-  
-    
   </div>
-
-
-  <!-- <ul class="nav">
-    <li routerLinkActive="active" *ngFor="let menuItem of menuItems"
-        class="{{menuItem.class}} nav-item" [class.dropdown]="menuItem.children && menuItem.children.length">
-      <a class="nav-link" [routerLink]="[menuItem.path]" *ngIf="!menuItem.children">
-        <i class="material-icons">{{menuItem.icon}}</i>
-        <p>{{menuItem.title}}</p>
-      </a>
-      <a href="javascript:void(0)" class="nav-link" *ngIf="menuItem.children" data-toggle="dropdown">
-        <i class="material-icons">{{menuItem.icon}}</i>
-        <p>{{menuItem.title}}</p>
-      </a>
-      <div class="dropdown-menu" *ngIf="menuItem.children">
-        <a class="dropdown-item" *ngFor="let child of menuItem.children" [routerLink]="[child.path]">
-          <i class="material-icons">{{child.icon}}</i>
-          <p>{{child.title}}</p>
-        </a>
-      </div>
-    </li>
-  </ul> -->
 
   <ul class="nav">
     <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="nav-item">
@@ -99,7 +33,7 @@
       </a>
       <div class="submenu" *ngIf="menuItem.children && menuItem.open">
         <ng-container *ngFor="let child of menuItem.children">
-          <a class="dropdown-item" [routerLink]="[child.path]" *ngIf="!child.children" [ngClass]="{ 'active': isActive(child.path) }">
+          <a class="dropdown-item" [routerLink]="[child.path]" [ngClass]="{ 'active': isActive(child.path) }">
             <i class="material-icons">{{child.icon}}</i>
             <p>{{child.title}}</p>
           </a>
