--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<!-- <div *ngIf="isSuperAdmin"> -->
 <div class="dashboard">
 
   <div class="header">
@@ -76,5 +77,5 @@
   
   </div>
 </div>
-
+<!-- </div> -->
 
