--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -1,3 +1,4 @@
+<!-- <div *ngIf="isNotSuper"> -->
 <div class="MainTableDetail">
        
 
@@ -235,7 +236,7 @@
     </div>
 
 </div>
-
+<!-- </div> -->
 
 <!-- <div class="other-page1" style="background: white;">
         <div>
